Gfk_Salesforce1/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>